# python-accounting

./: .gitignore  CLAUDE.md  pyproject.toml
docs/gaps/: 2025_11_25_ClaudeSessionAboutRequiredFeaturesForPostBalanceIntegration.txt  Proposed Upstream Enhancements.md  Using python-accounting with PostBalance.md  audit-logging-feature-design.md  refactoring-opportunities.md
python_accounting/exceptions/: __init__.py
python_accounting/mixins/: assigning.py  buying.py  selling.py
python_accounting/models/: account.py  transaction.py
python_accounting/reports/: aging_schedule.py
python_accounting/transactions/: cash_purchase.py  cash_sale.py  client_invoice.py  client_receipt.py  contra_entry.py  credit_note.py  debit_note.py  journal_entry.py  supplier_bill.py  supplier_payment.py
tests/: test_account.py  test_account_schedule.py  test_exceptions.py  test_transaction_config.py
