[project]
name = "python-accounting"
version = "1.0.1"
description = "The world's most comprehensive python Double Entry Accounting Library"
authors = [{name = "Edward Mungai", email = "emungai@microbooks.io"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0.23",
    "python-dateutil>=2.8.2",
    "strenum>=0.4.15",
    "toml>=0.10.2",
]

[project.optional-dependencies]
mysql = ["mysqlclient>=2.2.4"]
postgresql = ["psycopg2>=2.9.9"]
test = ["pytest>=7.4.3"]
dev = [
    "sphinx-autoapi>=3.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx>=7.2.6",
    "myst-parser>=2.0.0",
    "pylint>=3.1.0",
    "dill>=0.3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python_accounting"]
include = ["config.toml"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
